# aoc-2025

./: .dockerignore  Dockerfile  aoc2025.cabal  cabal.project  compose.yaml  day.sh  ghcup-set.sh
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Main.hs  Utils.hs
