cabal-version:      2.4
name:               aoc2025
version:            0.1.0.0

data-dir: data

extra-source-files: CHANGELOG.md

executable aoc2025
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: Haskell2010

  ghc-options:
    -Wall

  default-extensions:

  -- Modules included in this executable, other than Main.
  other-modules:
    Paths_aoc2025
    Utils
    Day01
    Day02

  autogen-modules:
    Paths_aoc2025

  build-depends:
      base ^>=4.20.0.0
